--- a/healingid/android/gradle.properties
+++ b/healingid/android/gradle.properties
@@ -26,3 +26,10 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+
+MYAPP_UPLOAD_STORE_FILE=daz.keystore
+MYAPP_UPLOAD_KEY_ALIAS=dazkey
+MYAPP_UPLOAD_STORE_PASSWORD=gds21543
+MYAPP_UPLOAD_KEY_PASSWORD=gds21543
+
+org.gradle.jvmargs=-Xmx4g
