--- a/healingid/android/app/build.gradle
+++ b/healingid/android/app/build.gradle
@@ -153,6 +153,15 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
+                storeFile file('daz.keystore')
+                storePassword 'gds21543'
+                keyAlias 'dazkey'
+                keyPassword 'gds21543'
+            }
+        }   
+        
     }
     buildTypes {
         debug {
@@ -169,6 +178,7 @@ android {
             signingConfig signingConfigs.debug
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release;
         }
     }
 
