initiate kapalan app

--- a/kapalan/android/app/build.gradle
+++ b/kapalan/android/app/build.gradle
@@ -71,7 +71,8 @@ import com.android.build.OutputFile
  *
  *   // override which node gets called and with what additional arguments
  *   nodeExecutableAndArgs: ["node"],
- *
+ *   // dhifaf athiyah zhabiyan
+     // 119140047npm list 
  *   // supply additional arguments to the packager
  *   extraPackagerArgs: []
  * ]
@@ -82,7 +83,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
-
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 /**
  * Set this to true to create two separate APKs instead of one:
  *   - An APK that only works on ARM devices
