--- a/kapalan/package.json
+++ b/kapalan/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.0",
     "@react-native-community/datetimepicker": "^6.1.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-material/core": "^1.3.7",
     "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
@@ -19,6 +20,10 @@
     "@react-navigation/native-stack": "^6.5.0",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-gesture-handler": "^2.3.2",
+    "react-native-reanimated": "^2.5.0",
+    "react-native-safe-area-context": "^4.2.2",
+    "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0"
   },
   "devDependencies": {
