--- a/kapalan/package.json
+++ b/kapalan/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint .",
-    "build": "cd android && .\\gradlew assembleRelease && cd .."
+    "build": "cd android && ./gradlew assembleRelease && cd .."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.0",
