--- a/kapalan/android/app/build.gradle
+++ b/kapalan/android/app/build.gradle
@@ -10,7 +10,7 @@ import com.android.build.OutputFile
  * bundle directly from the development server. Below you can see all the possible configurations
  * and their defaults. If you decide to add a configuration block, make sure to add it before the
  * `apply from: "../../node_modules/react-native/react.gradle"` line.
- *
+ * 
  * project.ext.react = [
  *   // the name of the generated asset file containing your JS bundle
  *   bundleAssetName: "index.android.bundle",
@@ -68,7 +68,9 @@ import com.android.build.OutputFile
  *   // indexes the entire tree), add them here. Alternatively, if you have JS files in android/
  *   // for example, you might want to remove it from here.
  *   inputExcludes: ["android/**", "ios/**"],
- *
+ *  // Dhifaf Athiyah Zhabiyan
+    // 119140047
+    // PAM RD
  *   // override which node gets called and with what additional arguments
  *   nodeExecutableAndArgs: ["node"],
  *   // dhifaf athiyah zhabiyan
